# wsrpc-cpp

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: standalone.yml
all/: CMakeLists.txt
cli/: CMakeLists.txt
cli/source/: main.cpp
cmake/: CPM.cmake  cxxopts.cmake  doctest.cmake  fmt.cmake  glaze.cmake  spdlog.cmake  thread_pool.cmake  tools.cmake  uWebSockets.cmake
include/wsrpc/: app.hpp  message.hpp  server.hpp  utility.hpp  wsrpc.h
source/: server.cpp  wsrpc.cpp
test/: CMakeLists.txt  client.html  client.js  client.py  session.js
test/data/: latest-commit@pbr-book.json  tree-commit-info@pbr-book.json
test/source/: app.cpp  greeter.cpp  main.cpp  message.cpp  server.cpp  utility.cpp  version.cpp
